Ability to treat mods_to_detect as whitelist + cleanups.
Allow to format "not allowed mods" log message