@@ -21,7 +21,6 @@ import java.io.IOException;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static java.lang.String.format;
 
@@ -84,28 +83,16 @@ public final class Inspector
         LOGGER.info("Inspecting player " + player);
         LOGGER.info("Inspecting mods: " + Arrays.toString(mods.toArray()));
 
-        final Set<String> modsNamesToDetect = this.configuration.getModsToDetect();
-        final Set<String> detectedModsNames = new HashSet<>();
-        for (final String playerModName : mods)
-        {
-            for (final String modNameToDetect : modsNamesToDetect)
-            {
-                final Pattern pattern = Pattern.compile(modNameToDetect, Pattern.CASE_INSENSITIVE);
-                if (pattern.matcher(playerModName).matches())
-                {
-                    detectedModsNames.add(playerModName);
-                }
-            }
-        }
+        final Set<String> notAllowedMods = findNotAllowedMods(mods);
 
-        if (detectedModsNames.size() != 0)
+        if (!notAllowedMods.isEmpty())
         {
             // IO operation -> run in separate thread.
             CompletableFuture.runAsync(() ->
             {
                 try
                 {
-                    this.logHandler.logPlayerWithMods(player, detectedModsNames);
+                    this.logHandler.logPlayerWithNotAllowedMods(player, notAllowedMods);
                 }
                 catch (IOException e)
                 {
@@ -116,11 +103,43 @@ public final class Inspector
         }
     }
 
+    private Set<String> findNotAllowedMods(final Collection<String> mods)
+    {
+        final Set<String> modNameDetectionPatterns = this.configuration.getModsToDetect();
+        final boolean shouldTreatModsToDetectAsWhitelist = this.configuration.shouldTreatModsToDetectAsWhitelist();
+        return findNotAllowedMods(mods, modNameDetectionPatterns, shouldTreatModsToDetectAsWhitelist);
+    }
+
+    private Set<String> findNotAllowedMods(Collection<String> mods, Set<String> modNameDetectionPatterns, boolean isWhiteList)
+    {
+        final Set<String> detectedModsNames = new HashSet<>();
+        boolean notAllowedMod = isWhiteList;
+        for (String mod : mods)
+        {
+            for (final String modNamePattern : modNameDetectionPatterns)
+            {
+                final Pattern pattern = Pattern.compile(modNamePattern, Pattern.CASE_INSENSITIVE);
+                if (pattern.matcher(mod).matches())
+                {
+                    notAllowedMod = !isWhiteList;
+                    break;
+                }
+            }
+
+            if (notAllowedMod)
+            {
+                detectedModsNames.add(mod);
+            }
+        }
+
+        return detectedModsNames;
+    }
+
     private List<String> prepareCommands(List<String> commandsToRun, ServerPlayer player)
     {
         return commandsToRun.stream()
                 .map(command -> command.replaceAll(PLAYER_PLACEHOLDER, player.getName().getString()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void executeCommandsOnPlayer(ServerPlayer player, List<String> commandsToRun)
